WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204405
Flaky JSC test: stress/stack-overflow-in-yarr-byteCompile.js.dfg-eager
https://bugs.webkit.org/show_bug.cgi?id=204405
Summary
Flaky JSC test: stress/stack-overflow-in-yarr-byteCompile.js.dfg-eager
Aakash Jain
Reported
2019-11-20 03:35:37 PST
stress/stack-overflow-in-yarr-byteCompile.js.dfg-eager seems flaky. In
https://ews-build.webkit.org/#/builders/1/builds/328
, the test failed in jscore-test step. However, in the immediately next retry step (jscore-test-rerun), it passed.
Attachments
proposed patch.
(2.56 KB, patch)
2019-11-20 09:15 PST
,
Mark Lam
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aakash Jain
Comment 1
2019-11-20 03:49:46 PST
Another instance of flakiness:
https://ews-build.webkit.org/#/builders/1/builds/256
Aakash Jain
Comment 2
2019-11-20 03:50:12 PST
This test was added recently in
https://trac.webkit.org/changeset/252239/webkit
Mark Lam
Comment 3
2019-11-20 09:15:51 PST
Created
attachment 383966
[details]
proposed patch.
Alexey Proskuryakov
Comment 4
2019-11-20 10:31:06 PST
Comment on
attachment 383966
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=383966&action=review
> Source/JavaScriptCore/ChangeLog:9 > + $vm.allWithStackSize() manipulates the stack in ways that will freak out ASan. > + So, add SUPPRESS_ASAN to functionCallWithStackSize() to tell ASan to ignore it.
Was there a separate bug where this was reported?
Mark Lam
Comment 5
2019-11-20 10:47:45 PST
(In reply to Alexey Proskuryakov from
comment #4
)
> Comment on
attachment 383966
[details]
> proposed patch. > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=383966&action=review
> > > Source/JavaScriptCore/ChangeLog:9 > > + $vm.allWithStackSize() manipulates the stack in ways that will freak out ASan. > > + So, add SUPPRESS_ASAN to functionCallWithStackSize() to tell ASan to ignore it. > > Was there a separate bug where this was reported?
Nope. I just happened to run an ASan build when I was trying to reproduce this issue, and noticed the ASan issue. Thought I might as well fix it since it can be a source of failures for this test.
Mark Lam
Comment 6
2019-11-20 10:51:55 PST
Thanks for the review. Landed in
r252694
: <
http://trac.webkit.org/r252694
>.
Radar WebKit Bug Importer
Comment 7
2019-11-20 10:52:31 PST
<
rdar://problem/57365049
>
Radar WebKit Bug Importer
Comment 8
2019-11-20 10:52:32 PST
<
rdar://problem/57365050
>
Mark Lam
Comment 9
2019-11-20 10:54:00 PST
<
rdar://problem/57365049
>
Michael Saboff
Comment 10
2019-11-20 13:21:16 PST
Comment on
attachment 383966
[details]
proposed patch. lgtm
Guillaume Emont
Comment 11
2019-11-22 10:36:32 PST
Comment on
attachment 383966
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=383966&action=review
> JSTests/stress/stack-overflow-in-yarr-byteCompile.js:2 > +//@ runDefault("--disableOptionsFreezingForTesting") > //@ skip if $hostOS != "darwin" or $architecture != "x86-64"
If runDefault() is before the skip, then it is always run. I corrected that in
Bug 204522
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug